with new registration flow email screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1163,6 +1163,9 @@
     //------------new registration---------
     <string name="login_or_signup">Login or signup for free</string>
     <string name="continue_with_email">Continue with email</string>
-    <string name="whats_your_email"> What&apos;s your email? </string>
+    <string name="whats_your_email"> What\'s your email? </string>
+    <string name="whats_your_pass"> What\'s your password? </string>
+    <string name="who_are_you"> Who are you? </string>
     <string name="we_need_it"> We need it to look up your account or create a new one. </string>
+    <string name="basic_info"> Enter your basic info </string>
 </resources>
