--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,7 +100,7 @@
     <string name="goodNudge"> Good nudge </string>
     <string name="send"> Send </string>
 
-    <string name="view_all"> <u> View All </u> </string>
+    <string name="view_all">  View All </string>
     <string name="do_not_have_bio">You do not currently have a bio</string>
     <string name="settings"> Settings </string>
     <string name="lastname"> Last Name </string>
