client issue resolved - done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <!--UMz4hd8TOycZb+vCdmJWD17CTzU=    (Release keyhash)-->
     <string name="app_name">SceneKey</string>
 
     <string name="facebook_app_id">1602336283352167</string>
